# py3langid

./: HISTORY.rst  MANIFEST.in  README.rst  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml  tests.yml
langid/: langid.py  model.py
langid/train/: LDfeatureselect.py  NBtrain.py  index.py  scanner.py  tokenize.py
py3langid/: __init__.py  langid.py  model.py
py3langid/examples/: _twokenize.py  process_twitter.py
py3langid/tools/: featWeights.py  printfeats.py
py3langid/train/: BLweight.py  DFfeatureselect.py  IGweight.py  LDfeatureselect.py  NBtrain.py  common.py  index.py  scanner.py  tokenize.py  train.py
tests/: test_langid.py  test_server.py
